[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["lucasx10 <lukasprado260@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "2.3.0"
pydantic-settings = "^2.2.1"
motor="^3.3.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
